--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://leafcarvalho.github.io/React_Pokedex/",
-  "name": "pokeapi",
+  "name": "React_Pokedex",
   "private": true,
   "version": "0.0.0",
   "type": "module",
