Excluindo testes com rotas

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://leafcarvalho.github.io/React_Pokedex/",
-  "name": "React_Pokedex",
+  "homepage": "https://leafcarvalho.github.io/react_pokedex/",
+  "name": "react_pokedex",
   "private": true,
   "version": "0.0.0",
   "type": "module",
